[gd_scene load_steps=2 format=3 uid="uid://confirm_dialog"]

[ext_resource type="Script" path="res://scripts/ui/confirm_dialog.gd" id="1_confirm_dialog"]

[node name="ConfirmDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_confirm_dialog")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "确认"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "确定要执行此操作吗？"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBox/ButtonContainer"]
layout_mode = 2
text = "确认"

[node name="CancelButton" type="Button" parent="Panel/VBox/ButtonContainer"]
layout_mode = 2
text = "取消"
